[gd_scene load_steps=6 format=3 uid="uid://dejpshl8vdv0h"]

[ext_resource type="Script" path="res://Scenes and Scripts/House/bed.gd" id="1_jrex8"]
[ext_resource type="Texture2D" uid="uid://dja1tpf6sxhua" path="res://Assets/bed.png" id="2_dwt2j"]
[ext_resource type="Texture2D" uid="uid://b5t563fwu7r7c" path="res://Assets/Buttons/pixil-frame-5.png" id="3_tedkn"]
[ext_resource type="Texture2D" uid="uid://j3x0e8rplr4s" path="res://Assets/Buttons/pixil-frame-4.png" id="4_1b7e2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cal5s"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.294118, 0.294118, 0.294118, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Bed" type="StaticBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_jrex8")

[node name="Shape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-24.5, -31.5, 24.5, -31.5, 24, 32, -24.5, 32)

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_dwt2j")

[node name="PlayerDetection" type="Area2D" parent="Sprite"]

[node name="DetectionShape" type="CollisionPolygon2D" parent="Sprite/PlayerDetection"]
position = Vector2(0, -12.4832)
scale = Vector2(1, 1.58654)
polygon = PackedVector2Array(-37, -14.1924, -34, 37.1773, 32.5, 36.8621, 34, -15.1378)

[node name="Panel" type="Panel" parent="."]
visible = false
texture_filter = 1
offset_left = -17.5
offset_top = -58.0
offset_right = 29.5
offset_bottom = 46.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cal5s")

[node name="WeaponTree" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 10.5
offset_top = 21.0
offset_right = 34.5
offset_bottom = 45.0
icon = ExtResource("3_tedkn")

[node name="Process" type="Label" parent="Panel/WeaponTree"]
layout_mode = 0
offset_left = 19.5
offset_top = 12.5
offset_right = 59.5
offset_bottom = 35.5
text = "S"

[node name="SaveGame" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 60.5
offset_right = 35.0
offset_bottom = 84.5
icon = ExtResource("4_1b7e2")

[node name="Craft" type="Label" parent="Panel/SaveGame"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.5
offset_right = 57.0
offset_bottom = 38.5
text = "A"

[connection signal="body_entered" from="Sprite/PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Sprite/PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="pressed" from="Panel/WeaponTree" to="." method="_on_weapon_tree_pressed"]
[connection signal="pressed" from="Panel/SaveGame" to="." method="_on_save_game_pressed"]
